--- a/index.htm
+++ b/index.htm
@@ -2,9 +2,9 @@
 <html lang="ua-UA">
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/function.js"></script>
+  <link rel="stylesheet" href="/encryption/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/encryption/style.css">
+  <script type="text/javascript" src="/encryption/function.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Дод. налаштування</title>
   <script type="text/javascript">
