--- a/index.htm
+++ b/index.htm
@@ -71,8 +71,8 @@
     <h1 style="margin:50px;">Дод. налаштування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
-     <a class="btn btn-block btn-danger" href="/device.htm">Кодування</a>
-     <a class="btn btn-block btn-default" href="/test.htm">Тест</a>
+     <a class="btn btn-block btn-danger" href="/encryption/device.htm">Кодування</a>
+     <a class="btn btn-block btn-default" href="/encryption/test.htm">Тест</a>
 	   
      <hr>
      <div class="alert alert-dismissible alert-warning"><strong>Будь ласка підключіться до свого роутера і вкажіть нижче вашу GMT зону.</strong>
