--- a/device.htm
+++ b/device.htm
@@ -15,13 +15,13 @@
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
      <a class="btn btn-block btn-danger" href="/index.htm">Налаштування</a>
-     <a class="btn btn-block btn-default" href="/lab1.htm">Лаба №1 Шифр Зсуву</a>
-     <a class="btn btn-block btn-default" href="/lab2.htm">Лаба №2 Шифр простої заміни</a>
-     <a class="btn btn-block btn-default" href="/lab3.htm">Лаба №3 Гомофонний шифр заміни</a>
-     <a class="btn btn-block btn-default" href="/lab4.htm">Лаба №4 Шифр Плейфера</a>
-     <a class="btn btn-block btn-default" href="/lab5.htm">Лаба №5</a>
-     <a class="btn btn-block btn-default" href="/lab6.htm">Лаба №6</a>
-     <a class="btn btn-block btn-default" href="/lab7.htm">Лаба №7</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab1.htm">Лаба №1 Шифр Зсуву</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab2.htm">Лаба №2 Шифр простої заміни</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab3.htm">Лаба №3 Гомофонний шифр заміни</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab4.htm">Лаба №4 Шифр Плейфера</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab5.htm">Лаба №5</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab6.htm">Лаба №6</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab7.htm">Лаба №7</a>
     </div>
    </div>
   </div>
