--- a/index.htm
+++ b/index.htm
@@ -115,7 +115,7 @@
      </div>
      <hr>
      <input class="btn btn-block btn-warning" value="Перезавантажити пристрій" onclick="restart(this,'Ви дійсно хочете перезавантажити пристрій?');" type="submit">
-     <a class="btn btn-block btn-default" href="/device.htm">Сторінка управління</a>
+     <a class="btn btn-block btn-default" href="/encryption/device.htm">Сторінка управління</a>
     </div>
    </div>
   </div>
