--- a/lab2.htm
+++ b/lab2.htm
@@ -2,12 +2,12 @@
 <html lang="ua-UA">
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/function.js"></script>
-  <script type="text/javascript" src="/lab.js"></script>
+  <link rel="stylesheet" href="/encryption/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/encryption/style.css">
+  <script type="text/javascript" src="/encryption/function.js"></script>
+  <script type="text/javascript" src="/encryption/lab.js"></script>
    
-  <script type="text/javascript" src="xm-player.js"></script>   <!--підключення музону -->
+  <script type="text/javascript" src="/encryption/xm-player.js"></script>   <!--підключення музону -->
   <script> let tor = "tor2.xm"</script>                      <!--вибір музону) -->
    
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@
     <h1 style="margin:50px;">Кодування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
-     <a class="btn btn-block btn-danger" href="/index.htm">Налаштування</a>
-     <a class="btn btn-block btn-default" href="/device.htm">Лаби</a>
+     <a class="btn btn-block btn-danger" href="/encryption/index.htm">Налаштування</a>
+     <a class="btn btn-block btn-default" href="/encryption/device.htm">Лаби</a>
      <h2>Введіть слово</h2>
      <input id="slov" class="form-control" pattern="[a-z]{1,26}" value="hello" placeholder="Писати сюди">
      <input class="btn btn-block btn-success" value="Закодувати" onclick="zakoduvaty2(this);" type="submit">
