--- a/device.htm
+++ b/device.htm
@@ -19,9 +19,9 @@
      <a class="btn btn-block btn-default" href="/encryption/lab2.htm">Лаба №2 Шифр простої заміни</a>
      <a class="btn btn-block btn-default" href="/encryption/lab3.htm">Лаба №3 Гомофонний шифр заміни</a>
      <a class="btn btn-block btn-default" href="/encryption/lab4.htm">Лаба №4 Шифр Плейфера</a>
-     <a class="btn btn-block btn-default" href="/encryption/lab5.htm">Лаба №5</a>
-     <a class="btn btn-block btn-default" href="/encryption/lab6.htm">Лаба №6</a>
-     <a class="btn btn-block btn-default" href="/encryption/lab7.htm">Лаба №7</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab5.htm">Лаба №5 ше не завезли</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab6.htm">Лаба №6 ше не завезли</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab7.htm">Лаба №7 ше не завезли</a>
     </div>
    </div>
   </div>
