--- a/index.htm
+++ b/index.htm
@@ -78,7 +78,7 @@
      <div class="alert alert-dismissible alert-warning"><strong>Будь ласка підключіться до свого роутера і вкажіть нижче вашу GMT зону.</strong>
       Це дозволить керувати вашим пристроєм в локальній мережі і синхронізувати час використовуючи ваш роутер.</div>
      <div class="alert alert-dismissible alert-info">
-      <b>Оновлення: <a href="/encryption/edit" target="_blank">Відкрити редактор HTML</a>, Завантажити прошивку (bin)</b>
+      <b>Оновлення: <a href="/encryption/edit.htm" target="_blank">Відкрити редактор HTML</a>, Завантажити прошивку (bin)</b>
       <form method="POST" action="/update" enctype="multipart/form-data">
        <div class="btn-group">
         <input type="file" class="btn btn-primary btn-xs" name="update" style="height: 33px;">
