--- a/lab6.htm
+++ b/lab6.htm
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Кодування</title>
   </head>
- <body onload="loadz();">                                       <!--Функція запускі плеєра + функція сервака -->
+ <body onload="load();">                                       <!--Функція запускі плеєра + функція сервака -->
   <div class="container">
    <div class="row" style="text-align:center;">
     <h1 style="margin:50px;">Кодування</h1>
@@ -21,18 +21,18 @@
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
      <a class="btn btn-block btn-danger" href="/index.htm">Налаштування</a>
      <a class="btn btn-block btn-default" href="/device.htm">Лаби</a>
-     <h2>Введіть Ключ</h2>
+     <h2>Ваш ключ не пр****ть</h2>
      <form onsubmit="return false;">
-     <input id="key" class="form-control" pattern="[a-z]{1,26}" value="key" placeholder="Писати сюди">
+     <input id="key" class="form-control" pattern="[0-9 ]{1,100}" placeholder="Сюди не писати" readonly>
      <h2>Введіть слово</h2>
-     <input id="slov" class="form-control" pattern="[a-z]{1,26}" value="hello" placeholder="Писати сюди">
-     <input id = "success" class="btn btn-block btn-success" value="Закодувати" onclick="zakoduvaty5(this);" type="submit">
+     <input id="slov" class="form-control" pattern="[a-z ]{1,50}" value="hello" placeholder="Писати сюди">
+     <input id = "success" class="btn btn-block btn-success" value="Закодувати" onclick="zakoduvaty6(this);" type="submit">
      </form>
      <h2>Закодоване слово</h2>
      <input class="form-control" id="zakodslov" readonly>
      <h2>Введіть код</h2>
-     <input id="zakodslovo" class="form-control" pattern="[0-9 ]{1,50}" placeholder="Писати сюди">
-     <input class="btn btn-block btn-success" value="Розкодувати" onclick="rozkoduvaty5(this);" type="submit">
+     <input id="zakodslovo" class="form-control" pattern="[a-z ]{1,50}" placeholder="Писати сюди">
+     <input class="btn btn-block btn-success" value="Розкодувати" onclick="rozkoduvaty6(this);" type="submit">
      <h2>Розкодоване слово</h2>
      <input class="form-control" id="rez" readonly>
     </div>
