--- a/device.htm
+++ b/device.htm
@@ -2,9 +2,9 @@
 <html lang="ua-UA">
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/function.js"></script>
+  <link rel="stylesheet" href="/encryption/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/encryption/style.css">
+  <script type="text/javascript" src="/encryption/function.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Кодування</title>
   </head>
@@ -14,14 +14,14 @@
     <h1 style="margin:50px;">Кодування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
-     <a class="btn btn-block btn-danger" href="/index.htm">Налаштування</a>
-     <a class="btn btn-block btn-default" href="/lab1.htm">Лаба №1 Шифр Зсуву</a>
-     <a class="btn btn-block btn-default" href="/lab2.htm">Лаба №2 Шифр простої заміни</a>
-     <a class="btn btn-block btn-default" href="/lab3.htm">Лаба №3 Гомофонний шифр заміни</a>
-     <a class="btn btn-block btn-default" href="/lab4.htm">Лаба №4 Шифр Плейфера</a>
-     <a class="btn btn-block btn-default" href="/lab5.htm">Лаба №5 Шифр Віженера</a>
-     <a class="btn btn-block btn-default" href="/lab6.htm">Лаба №6 Шифр перестановки</a>
-     <a class="btn btn-block btn-default" href="/lab7.htm">Лаба №7 шифр Калина</a>
+     <a class="btn btn-block btn-danger" href="/encryption/index.htm">Налаштування</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab1.htm">Лаба №1 Шифр Зсуву</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab2.htm">Лаба №2 Шифр простої заміни</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab3.htm">Лаба №3 Гомофонний шифр заміни</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab4.htm">Лаба №4 Шифр Плейфера</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab5.htm">Лаба №5 Шифр Віженера</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab6.htm">Лаба №6 Шифр перестановки</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab7.htm">Лаба №7 шифр Калина</a>
     </div>
    </div>
   </div>
