--- a/lab5.htm
+++ b/lab5.htm
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="/encryption/function.js"></script>
   <script type="text/javascript" src="/encryption/lab.js"></script>
   
-  <script type="text/javascript" src="/encryption/xm-player.js"></script>   <!--підключення музону -->
+  <script type="text/javascript" src="xm-player.js"></script>   <!--підключення музону -->
   <script> let tor = "tor5.xm"</script>                      <!--вибір музону) -->
    
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
