--- a/lab5.htm
+++ b/lab5.htm
@@ -19,8 +19,8 @@
     <h1 style="margin:50px;">Кодування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
-     <a class="btn btn-block btn-danger" href="/index.htm">Налаштування</a>
-     <a class="btn btn-block btn-default" href="/device.htm">Лаби</a>
+     <a class="btn btn-block btn-danger" href="/encryption/index.htm">Налаштування</a>
+     <a class="btn btn-block btn-default" href="/encryption/device.htm">Лаби</a>
      <h2>Введіть Ключ</h2>
      <form onsubmit="return false;">
      <input id="key" class="form-control" pattern="[a-z]{1,26}" value="key" placeholder="Писати сюди">
