--- a/lab6.htm
+++ b/lab6.htm
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Кодування</title>
   </head>
- <body onload="load();">                                       <!--Функція запускі плеєра + функція сервака -->
+ <body onload="loadz();">                                       <!--Функція запускі плеєра + функція сервака -->
   <div class="container">
    <div class="row" style="text-align:center;">
     <h1 style="margin:50px;">Кодування</h1>
