--- a/device.htm
+++ b/device.htm
@@ -21,7 +21,7 @@
      <a class="btn btn-block btn-default" href="/encryption/lab4.htm">Лаба №4 Шифр Плейфера</a>
      <a class="btn btn-block btn-default" href="/encryption/lab5.htm">Лаба №5 Шифр Віженера</a>
      <a class="btn btn-block btn-default" href="/encryption/lab6.htm">Лаба №6 Шифр перестановки</a>
-     <a class="btn btn-block btn-default" href="/encryption/lab7.htm">Лаба №7 шифр Калина</a>
+     <a class="btn btn-block btn-default" href="/encryption/lab7.htm">Лаба №7 шифр XOR</a>
     </div>
    </div>
   </div>
