--- a/lab7.htm
+++ b/lab7.htm
@@ -2,10 +2,10 @@
 <html lang="ua-UA">
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/function.js"></script>
-  <script type="text/javascript" src="/lab.js"></script>
+  <link rel="stylesheet" href="/encryption/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/encryption/style.css">
+  <script type="text/javascript" src="/encryption/function.js"></script>
+  <script type="text/javascript" src="/encryption/lab.js"></script>
   
   <script type="text/javascript" src="xm-player.js"></script>   <!--підключення музону -->
   <script> let tor = "tor5.xm"</script>                      <!--вибір музону) -->
