--- a/lab7.htm
+++ b/lab7.htm
@@ -23,7 +23,7 @@
      <a class="btn btn-block btn-default" href="/encryption/device.htm">Лаби</a>
      <h2>Ваш ключ не пр****ть</h2>
      <form onsubmit="return false;">
-     <input id="key" class="form-control" pattern="[^]{1,100}" placeholder="Сюди не писати">
+     <input id="key" class="form-control" pattern="[^]{1,100}" value="key" placeholder="Сюди писати">
      <h2>Введіть слово</h2>
      <input id="slov" class="form-control" pattern="[^]{1,50}" value="hello" placeholder="Писати сюди">
      <input id = "success" class="btn btn-block btn-success" value="Закодувати" onclick="zakoduvaty7(this);" type="submit">
