--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,7 @@
    function set_ssdp(submit){
     server = "/ssdp?ssdp="+val('ssdp');
     send_request(submit,server);
-    document.getElementById('ssdp_t').innerHTML = val('ssdp');
+    document.getElementById('ssdp_t').innerHTML = 'SERVAK';
    }
    function restart(submit,texts){
     if (confirm(texts)) {
