--- a/lab1.htm
+++ b/lab1.htm
@@ -18,7 +18,7 @@
    <div class="row" style="text-align:center;">
     <h1 style="margin:50px;">Кодування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-     <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
+     <h5 class="alert-info" id="ssdp_t">SERVAK</h5>
      <a class="btn btn-block btn-danger" href="/encryption/index.htm">Налаштування</a>
      <a class="btn btn-block btn-default" href="/encryption/device.htm">Лаби</a>
      <h2>Введіть слово англійським нижнім регістром</h2>
