--- a/device.htm
+++ b/device.htm
@@ -13,7 +13,7 @@
    <div class="row" style="text-align:center;">
     <h1 style="margin:50px;">Кодування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-     <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
+     <h5 class="alert-info" id="ssdp_t">SERVAK</h5>
      <a class="btn btn-block btn-danger" href="/encryption/index.htm">Налаштування</a>
      <a class="btn btn-block btn-default" href="/encryption/lab1.htm">Лаба №1 Шифр Зсуву</a>
      <a class="btn btn-block btn-default" href="/encryption/lab2.htm">Лаба №2 Шифр простої заміни</a>
