--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
    <div class="row" style="text-align:center;">
     <h1 style="margin:50px;">Дод. налаштування</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-     <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
+     <h5 class="alert-info" id="ssdp_t">SERVAK</h5>
      <a class="btn btn-block btn-danger" href="/encryption/device.htm">Кодування</a>
      <a class="btn btn-block btn-default" href="/encryption/test.htm">Тест</a>
 	   
@@ -87,26 +87,26 @@
       </form>
      </div>
      <h2>Ім'я пристрою</h2>
-     <input id="ssdp" value="{{SSDP}}" class="form-control" pattern="[0-9a-zA-Zа-яА-Я. ]{1,20}" placeholder="Ім'я пристрою">
+     <input id="ssdp" value="SERVAK" class="form-control" pattern="[0-9a-zA-Zа-яА-Я. ]{1,20}" placeholder="Ім'я пристрою">
      <input class="btn btn-block btn-success" value="Зберегти" onclick="set_ssdp(this);" type="submit">
      <hr>
      <h2>Підключення до WiFi роутера</h2>
-     <input id="ssid" value="{{ssid}}" class="form-control" pattern="[0-9a-zA-Z.]{1,15}" placeholder="Ім'я WiFi мережі">
-     <input id="password" value="{{password}}" pattern=".{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
+     <input id="ssid" class="form-control" pattern="[0-9a-zA-Z.]{1,15}" placeholder="Ім'я WiFi мережі">
+     <input id="password"  pattern=".{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
      <input class="btn btn-block btn-success" value="Зберегти" onclick="set_ssid(this);" type="submit">
      <hr>
      <h2>Часовий пояс GMT</h2>
-     <input id="timezone" value="{{timezone}}" pattern="[0-9]{1,3}" class="form-control">
+     <input id="timezone" pattern="[0-9]{1,3}" class="form-control">
      <input class="btn btn-block btn-success" value="Зберегти" onclick="time_zone(this);" type="submit">
      <input class="btn btn-block btn-primary" value="Авто визначення і збереження зони" onclick="set_time_zone(this);" type="submit">
-     <h2>На устройстве сейчас <strong id="time">{{time}}</strong></h2>
+     <h2>На устройстве сейчас <strong id="time">00:00</strong></h2>
      <input class="btn btn-block btn-primary" value="Синхронізувати час" onclick="load_time(this);" type="submit">
      <hr>
      <h2>Точка доступа</h2>
      <div class="row">
       <div class="col-sm-6">
-       <input id="ssidap" value="{{ssidAP}}" class="form-control" pattern="[0-9a-zA-Z.]{1,15}" placeholder="Ім'я WiFi мережі">
-       <input id="passwordAp" value="{{passwordAP}}" pattern=".{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
+       <input id="ssidap"  class="form-control" pattern="[0-9a-zA-Z.]{1,15}" placeholder="Ім'я WiFi мережі">
+       <input id="passwordAp"  pattern=".{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
        <input class="btn btn-block btn-success" value="Зберегти" onclick="set_ssid_ap(this);" type="submit">
       </div>
       <div class="col-sm-6">
